saint-lascivious.github.io: a lot more
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -190,7 +190,7 @@
             <p>
               Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
             </p>
-            <a href="pokedexoverdns.html" class="subterfuge" id="tooltip-alttext-265">
+            <a href="pokedexoverdns.html" class="subterfuge" id="image-265">
               <picture class="light-mode-img">
                 <source srcset="resources/images/wurmple.webp" type="image/webp">
                 <source srcset="resources/images/wurmple.png" type="image/png">
@@ -204,7 +204,7 @@
                 <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
               </picture>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="tooltip-alttext-265">
+            <a class="mdl-tooltip mdl-tooltip--top" for="image-265">
               Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
             </a>
           </div>
@@ -329,40 +329,40 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
-              <span id="tooltip-email">
+              <span id="icon-email">
                 <icon class="material-icons">email</icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-email">
                 Email
               </span>
             </a>
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn">
-              <span id="tooltip-discord">
+              <span id="icon-discord">
                 <icon class="fa-brands fa-discord"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-discord">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
                 Discord
               </span>
             </a>
           </li>
           <li>
             <a href="https://github.com/saint-lascivious">
-              <span id="tooltip-github">
+              <span id="icon-github">
                 <icon class="fa-brands fa-github"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-github">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-github">
                 GitHub
               </span>
             </a>
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious">
-              <span id="tooltip-reddit">
+              <span id="icon-reddit">
                 <icon class="fa-brands fa-reddit"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-reddit">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
                 Reddit
               </span>
             </a>
