--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -168,14 +168,6 @@
       </div>
       <div class="ribbon cyan-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
-        <div class="sainternet-container mdl-grid">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <div class="sainternet-crumbs">
-              <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a>
-            </div>
-          </div>
-        </div>
         <div class="sainternet-container mdl-grid" id="pokemon404">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
@@ -192,7 +184,7 @@
             <p>
               Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
             </p>
-            <a href="pokedexoverdns.html" class="subterfuge">
+            <a href="pokedexoverdns.html" class="subterfuge" id="image-404">
               <picture class="light-mode-img">
                 <source srcset="resources/images/luxio.webp" type="image/webp">
                 <source srcset="resources/images/luxio.png" type="image/png">
@@ -206,7 +198,7 @@
                 <img src="resources/images/luxio-shiny.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
               </picture>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--right" for="tooltip-alttext-404">
+            <a class="mdl-tooltip mdl-tooltip--top" for="image-404">
               Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
             </a>
           </div>
@@ -331,40 +323,40 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
-              <span id="tooltip-email">
+              <span id="icon-email">
                 <icon class="material-icons">email</icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-email">
                 Email
               </span>
             </a>
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn">
-              <span id="tooltip-discord">
+              <span id="icon-discord">
                 <icon class="fa-brands fa-discord"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-discord">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
                 Discord
               </span>
             </a>
           </li>
           <li>
             <a href="https://github.com/saint-lascivious">
-              <span id="tooltip-github">
+              <span id="icon-github">
                 <icon class="fa-brands fa-github"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-github">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-github">
                 GitHub
               </span>
             </a>
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious">
-              <span id="tooltip-reddit">
+              <span id="icon-reddit">
                 <icon class="fa-brands fa-reddit"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-reddit">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
                 Reddit
               </span>
             </a>
