--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -201,11 +201,8 @@
               Notes:
             </p>
             <ol>
-              <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.</li>
+              <li>You can find information about the technologies used to power Sainternet Filtered DNS <a href="technologies.html">here</a>.</li>
             </ol>
-            <p>
-              You can find information about the technologies used to power Sainternet Filtered DNS <a href="technologies.html">here</a>.
-            </p>
           </div>
         </div>
       </main>
@@ -214,40 +211,40 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
-              <span id="tooltip-email">
+              <span id="icon-email">
                 <icon class="material-icons">email</icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-email">
                 Email
               </span>
             </a>
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn">
-              <span id="tooltip-discord">
+              <span id="icon-discord">
                 <icon class="fa-brands fa-discord"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-discord">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
                 Discord
               </span>
             </a>
           </li>
           <li>
             <a href="https://github.com/saint-lascivious">
-              <span id="tooltip-github">
+              <span id="icon-github">
                 <icon class="fa-brands fa-github"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-github">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-github">
                 GitHub
               </span>
             </a>
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious">
-              <span id="tooltip-reddit">
+              <span id="icon-reddit">
                 <icon class="fa-brands fa-reddit"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-reddit">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
                 Reddit
               </span>
             </a>
