--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -180,7 +180,7 @@
             <p>
               Take a look around, there's a navigational panel to your left and/or above (desktop and mobile layouts may differ), you may find something that interests you here.
             </p>
-            <a href="pokedexoverdns.html" class="subterfuge" id="tooltip-alttext-wurm">
+            <a href="pokedexoverdns.html" class="subterfuge" id="image-wurm">
               <picture class="light-mode-img">
                 <source srcset="resources/images/wurmple.webp" type="image/webp">
                 <source srcset="resources/images/wurmple.png" type="image/png">
@@ -194,7 +194,7 @@
                 <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
               </picture>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="tooltip-alttext-wurm">
+            <a class="mdl-tooltip mdl-tooltip--top" for="image-wurm">
               Image supplied not illustrative, the author is not a Pokémon.
             </a>
           </div>
@@ -205,40 +205,40 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
-              <span id="tooltip-email">
+              <span id="icon-email">
                 <icon class="material-icons">email</icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-email">
                 Email
               </span>
             </a>
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn">
-              <span id="tooltip-discord">
+              <span id="icon-discord">
                 <icon class="fa-brands fa-discord"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-discord">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
                 Discord
               </span>
             </a>
           </li>
           <li>
             <a href="https://github.com/saint-lascivious">
-              <span id="tooltip-github">
+              <span id="icon-github">
                 <icon class="fa-brands fa-github"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-github">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-github">
                 GitHub
               </span>
             </a>
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious">
-              <span id="tooltip-reddit">
+              <span id="icon-reddit">
                 <icon class="fa-brands fa-reddit"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-reddit">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
                 Reddit
               </span>
             </a>
