--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -245,13 +245,13 @@
               Day
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <picture id="tooltip-alttext-day">
+              <picture id="image-day">
                 <source srcset="resources/images/pihole_percent-day.webp" type="image/webp">
                 <source srcset="resources/images/pihole_percent-day.png" type="image/png">
                 <source srcset="resources/images/pihole_percent-day.jpg" type="image/jpeg">
                 <img src="resources/images/pihole_percent-day.jpg" width="860" height="480" alt="Blocked queries as a percentile, by day.">
               </picture>
-              <picture class="mdl-tooltip mdl-tooltip--top" for="tooltip-alttext-day">
+              <picture class="mdl-tooltip mdl-tooltip--top" for="image-day">
                 Blocked queries as a percentile, by day.
               </picture>
             </div>
@@ -259,13 +259,13 @@
               Week
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <picture id="tooltip-alttext-week">
+              <picture id="image-week">
                 <source srcset="resources/images/pihole_percent-week.webp" type="image/webp">
                 <source srcset="resources/images/pihole_percent-week.png" type="image/png">
                 <source srcset="resources/images/pihole_percent-week.jpg" type="image/jpeg">
                 <img src="resources/images/pihole_percent-day.jpg" width="860" height="480" alt="Blocked queries as a percentile, by week.">
               </picture>
-              <picture class="mdl-tooltip mdl-tooltip--top" for="tooltip-alttext-week">
+              <picture class="mdl-tooltip mdl-tooltip--top" for="image-week">
                 Blocked queries as a percentile, by week.
               </picture>
             </div>
@@ -273,13 +273,13 @@
               Month
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <picture id="tooltip-alttext-month">
+              <picture id="image-month">
                 <source srcset="resources/images/pihole_percent-month.webp" type="image/webp">
                 <source srcset="resources/images/pihole_percent-month.png" type="image/png">
                 <source srcset="resources/images/pihole_percent-month.jpg" type="image/jpeg">
                 <img src="resources/images/pihole_percent-month.jpg" width="860" height="480" alt="Blocked queries as a percentile, by month.">
               </picture>
-              <picture class="mdl-tooltip mdl-tooltip--top" for="tooltip-alttext-month">
+              <picture class="mdl-tooltip mdl-tooltip--top" for="image-month">
                 Blocked queries as a percentile, by month.
               </picture>
             </div>
@@ -287,13 +287,13 @@
               Year
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <picture id="tooltip-alttext-year">
+              <picture id="image-year">
                 <source srcset="resources/images/pihole_percent-year.webp" type="image/webp">
                 <source srcset="resources/images/pihole_percent-year.png" type="image/png">
                 <source srcset="resources/images/pihole_percent-year.jpg" type="image/jpeg">
                 <img src="resources/images/pihole_percent-year.jpg" width="860" height="480" alt="Blocked queries as a percentile, by year.">
               </picture>
-              <picture class="mdl-tooltip mdl-tooltip--top" for="tooltip-alttext-year">
+              <picture class="mdl-tooltip mdl-tooltip--top" for="image-year">
                 Blocked queries as a percentile, by year.
               </picture>
             </div>
@@ -414,13 +414,13 @@
               What Does This Mean for Me?
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <picture id="tooltip-alttext-farquaad">
+              <picture id="image-farquaad">
                 <source srcset="resources/images/farquaad.webp" type="image/webp">
                 <source srcset="resources/images/farquaad.png" type="image/png">
                 <source srcset="resources/images/farquaad.jpg" type="image/jpeg">
                 <img src="resources/images/farquaad.jpg" width="756" height="480" alt="Some of you may die, but that is a sacrifice I am willing to make.">
               </picture>
-              <picture class="mdl-tooltip mdl-tooltip--top" for="tooltip-alttext-farquaad">
+              <picture class="mdl-tooltip mdl-tooltip--top" for="image-farquaad">
                 Some of you may die, but that is a sacrifice I am willing to make.
               </picture>
             </div>
@@ -641,40 +641,40 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
-              <span id="tooltip-email">
+              <span id="icon-email">
                 <icon class="material-icons">email</icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-email">
                 Email
               </span>
             </a>
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn">
-              <span id="tooltip-discord">
+              <span id="icon-discord">
                 <icon class="fa-brands fa-discord"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-discord">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
                 Discord
               </span>
             </a>
           </li>
           <li>
             <a href="https://github.com/saint-lascivious">
-              <span id="tooltip-github">
+              <span id="icon-github">
                 <icon class="fa-brands fa-github"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-github">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-github">
                 GitHub
               </span>
             </a>
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious">
-              <span id="tooltip-reddit">
+              <span id="icon-reddit">
                 <icon class="fa-brands fa-reddit"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-reddit">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
                 Reddit
               </span>
             </a>
