--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -199,7 +199,7 @@
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                  <td><code>119.224.127.171</code><br><span id="tooltip-ipv6-1"><code>::ffff:77e0:7fab</code></span><span class="mdl-tooltip mdl-tooltip--top" for="tooltip-ipv6-1"><code>::ffff:119.224.127.171</code></span></td>
+                  <td><code>119.224.127.171</code><br><span id="alt-ipv6-1"><code>::ffff:77e0:7fab</code></span><span class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1"><code>::ffff:119.224.127.171</code></span></td>
                   <td>TCP<br><code>53</code></td>
                 </tr>
                 <tr>
@@ -209,7 +209,7 @@
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                  <td><code>119.224.127.171</code><br><span id="tooltip-ipv6-2"><code>::ffff:77e0:7fab</code></span><span class="mdl-tooltip mdl-tooltip--top" for="tooltip-ipv6-2"><code>::ffff:119.224.127.171</code></span></td>
+                  <td><code>119.224.127.171</code><br><span id="alt-ipv6-2"><code>::ffff:77e0:7fab</code></span><span class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2"><code>::ffff:119.224.127.171</code></span></td>
                   <td>UDP<br><code>53</code></td>
                 </tr>
                 <tr>
@@ -227,40 +227,40 @@
         <ul class="mdl-mini-footer--link-list">
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
-              <span id="tooltip-email">
+              <span id="icon-email">
                 <icon class="material-icons">email</icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-email">
                 Email
               </span>
             </a>
           </li>
           <li>
             <a href="https://discord.gg/NC7taVyn">
-              <span id="tooltip-discord">
+              <span id="icon-discord">
                 <icon class="fa-brands fa-discord"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-discord">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
                 Discord
               </span>
             </a>
           </li>
           <li>
             <a href="https://github.com/saint-lascivious">
-              <span id="tooltip-github">
+              <span id="icon-github">
                 <icon class="fa-brands fa-github"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-github">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-github">
                 GitHub
               </span>
             </a>
           </li>
           <li>
             <a href="https://www.reddit.com/user/saint-lascivious">
-              <span id="tooltip-reddit">
+              <span id="icon-reddit">
                 <icon class="fa-brands fa-reddit"></icon>
               </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-reddit">
+              <span class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
                 Reddit
               </span>
             </a>
